# tareas-CC7515

./: .gitignore  README.md
tarea-01/: CMakeLists.txt  README.md
tarea-01/elements/: point.h  polygon.h  segment.h  test_point.h  test_vector.h  vector.h
tarea-01/half_edge/: face.h  h_edge.cpp  h_edge.h  vertex.h
tarea-01/half_edge/loff/: load_off.cpp  load_off.h
tarea-01/tests/: point.cpp  test_point.cpp  test_vector.cpp  vector.cpp
tarea-01/tests/elements/: test_point.cpp  test_polygon.cpp  test_segment.cpp  test_vector.cpp
tarea-01/tests/half_edge/: cubes2d_bad.off  cubes2d_good.off  test_half_edge.cpp  test_load_off.cpp
tarea-01/tests/utils/: test_convex_hull.cpp
tarea-01/utils/: convex_hull.h
tarea-02-shaders/: CMakeLists.txt  README.md  index.html
tarea-02-shaders/shaders/: julia-cos.frag  julia-exp-z-3.frag  julia-exp.frag  julia-pol2.frag  julia-pol3.frag  julia-pol4.frag  julia-sin.frag  julia-z-3.frag  julia-z-4.frag  julia-z-exp.frag  julia-z-sin-exp.frag  julia-z2-exp-z.frag  julia-z2.frag  julia-z3.frag  julia-z4.frag  julia.vert  mandelbrot.frag  mandelbrot.vert  mandelbrot.vsh
tarea-02-shaders/src/: app.js
tarea-03/cpu/: CMakeLists.txt  GOL.cpp  GOL.h  bign.py  creagrilla.py  main.cpp
tarea-03/cuda/: CMakeLists.txt  GOL.cu  T3-CC7515-CUDA.sln  T3-CC7515-CUDA.vcxproj  bign.py  creagrilla.py  main.cpp  main.cu  verblocks.py
tarea-03/opencl/: CMakeLists.txt  FindOpenCL.cmake  GOL-kernels.cl  GOL.cpp  bign.py  main.cpp  (+5 more)
tarea-03/opencl/otros/: CMakeLists.txt  CMakeListsv2.txt  Comando Compilacion  FindOpenCL.cmake  FindOpenCL.cmakev2
(+33 files in other folders)
